src/test/ui/span/E0537.stderr
error[E0537]: invalid predicate `unknown`
  --> $DIR/E0537.rs:11:7
   |
LL | #[cfg(unknown())] //~ ERROR E0537
   |       ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0537`.
